--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div id="introduccion">
 		<h1>Título: Ayudantía 6</h1>
 		<img src="img/imagen01.jpg">
-		<p>Párrafo para describir a mi gato</p>
+		<p>Holi esta es mi primera vez subiendo algo así y está medio complicado</p>
 	</div>
 
 
