--- a/index.html
+++ b/index.html
@@ -2,78 +2,39 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<!-- Nombre en pestaña  -->
-	<title>DTS</title>
-	<!-- Importar hoja de estilo  -->
+	<title>Why the future doesn´t need us?</title>
+
 	<link rel="stylesheet" href="style.css">
-	<!-- Importar tipografías-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-
 </head>
 
-<header> <!-- En el header va el encabezado de nuestra pagina-->
+<header>
+	<a class="logo">
+	<img src="img/logo.gif" alt="logo"/>
+	<h1 class="nombregrupo">Grupo 7</h1>
 
 
-	<div id="introduccion">
-		<h1>Título: Ayudantía 6</h1>
-		<img src="img/imagen01.jpg">
-		<p>Holi esta es mi primera vez subiendo algo así y está medio complicado</p>
-	</div>
+	</a>
 
+
+<nav>
+	<a href="" class="nav-link">Inicio</a>
+	<a href="" class="nav-link">Paper</a>
+	<a href="" class="nav-link">Contacto</a>
+
+</nav>
 
 </header>
 
 
-<body> <!-- En el body va el cuerpo de nuestra pagina -->
+
+<body>
 
 
-	<div id="contenedor">
-        
-		<h2>A Sub titulo para este proyecto</h2>
-				<img src="img/imagen02.jpg">
-		<p>-Otro párrafo cortito...</p>
-			
-		<h3>B Sub titulo otro contenido</h3>
-		<p>Un párrafo final tipo conclusión</p>
-
-		<h2>C Sub titulo vis 1</h2>
-		<img src="img/vis01.jpg">
-		<p>Un párrafo explicativo</p>
-
-		<h2>D Sub titulo vis 2</h3>
-		<object data="img/vis02.svg" type="image/svg+xml"></object>
-		<p>Un párrafo explicativo</p>
-
-	</div><!-- cierre div contenedor -->
 
 
-	<div id="desarrollo">
-		otro div
-	</div>
-
-
-	<div id="conclusion">
-		otro div mas...
-	</div>
-
-	</div>
 
 </body>
-
-
-<footer>   <!-- En el footer va el pie de pagina de nuestra web -->
-
-	<div class="info-footer">
-		<ul class="lista-footer">
-	    	<li><a href="/">Twitter</a></li>
-	    	<li><a href="/">Instagram</a></li>
-	    	<li><a href="/">Facebook</a></li>
-		</ul>
-	</div>
-
-</footer>
-
-
 </html>
